solving background image not showing issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,7 @@ nav button{
 
 /* Banner style */
 .banner{
-    background-image: url('/assets/Hero-bg.png');
+    background-image: url('/Hero-bg.png');
     height: 650px;
     margin-top: 36px;
     margin-bottom: 74px;
